--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^12.8.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-scripts": "5.0.1",
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "parcel": "^2.16.4",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^3.4.19"
   }
