--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^12.8.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "parcel": "^2.16.4",
     "react-router-dom": "^7.13.0",
     "tailwindcss": "^3.4.19"
